--- a/IServer/src/main/resources/jdbc/ifiuc.jdbc.properties
+++ b/IServer/src/main/resources/jdbc/ifiuc.jdbc.properties
@@ -1,9 +1,9 @@
 
 datasource.driverClassName.mysql=com.mysql.jdbc.Driver
 datasource.dataSourceClassName.mysql=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-datasource.url.test=jdbc\:mysql\://10.150.130.33\:3566/orders?zeroDateTimeBehavior\=round&useUnicode\=true&characterEncoding\=UTF-8
+datasource.url.test=jdbc\:mysql\://127.0.0.0\:3306/orders?zeroDateTimeBehavior\=round&useUnicode\=true&characterEncoding\=UTF-8
 datasource.username.test=orders_r
-datasource.password.test=qbQVA5yxikZVLID6X3lc
+datasource.password.test=123456
 
 
 mybatis.alias.basepackage.model=com.letv.fund.model
